<?xml version="1.0"?>
<package format="2">
  <name>arm_hw</name>
  <version>0.0.0</version>
  <description>use for abstracting hardware</description>
  <maintainer email="2028238109@qq.com">Siyang Liu</maintainer>

  <license>BSD</license>
  <author email="2028238109@qq.com">Siyang Liu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <depend>arm_common</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>controller_interface</depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>realtime_tools</depend>

  <!--    <export>
          <transmission_interface plugin="${prefix}/rm_hw_loader_plugins.xml"/>
      </export> -->
</package>